@@ -1,6 +1,5 @@
 package ru.nikitadenisov.lab3.analyzer;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -13,7 +12,7 @@ public class DemographicAnalyzer {
     }
 
     // Количество человек, родившихся в определенный месяц.
-    public long numberStudentsInMonth(Month month) {
+    public long numberStudentsBornInMonth(Month month) {
         return students.stream()
                 .filter(student -> student.getBirthMonth() == month)
                 .count();
@@ -21,22 +20,18 @@ public class DemographicAnalyzer {
 
     // Месяцы, в которых родилось больше женщин, чем мужчин.
     public List<Month> monthsWithMoreFemalesThanMales() {
-        return Arrays.stream(Month.values())
-                .filter(this::moreFemalesThanMalesInMonth)
-                .collect(Collectors.toList());
+        List<Month> femaleMonths = monthsByGender(Gender.FEMALE);
+        List<Month> maleMonths = monthsByGender(Gender.MALE);
+
+        maleMonths.forEach(femaleMonths::remove);
+
+        return femaleMonths.stream().distinct().toList();
     }
 
-    private boolean moreFemalesThanMalesInMonth(Month month) {
-        long femaleNumber = students.stream()
-                .filter(student -> student.getBirthMonth() == month &&
-                        student.getGender() == Gender.FEMALE)
-                .count();
-
-        long maleCount = students.stream()
-                .filter(student -> student.getBirthMonth() == month &&
-                        student.getGender() == Gender.MALE)
-                .count();
-
-        return femaleNumber > maleCount;
+    private List<Month> monthsByGender(Gender gender) {
+        return students.stream()
+                .filter(student -> student.getGender() == gender)
+                .map(Student::getBirthMonth)
+                .collect(Collectors.toList());
     }
 }
